Fixed clipping of parallax background

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ a:hover {
 
 html, body {
     width: 100%;
-    height: 100%;
 }
 
 body {
@@ -28,6 +27,7 @@ body {
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     background-color: #212121;
     width: 1920px;
+    height: 1080px;
     transform-origin: 0 0;
     overflow-x: hidden; 
 }
